# explain

./: README.md  main.py  pyproject.toml
prompts/: ask.txt  docstring.txt  refactor.txt  suggest_tests.txt  summarize_file.txt
src/: chat_with_model.py  commands.py  constants.py  get_prompt.py  get_prompts.py  utils.py
