[project]
name = "explain"
version = "0.1.0"
description = ""

authors = [
    {name = "piotrekkonczyk",email = "konczyk.piotrek@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11,<3.14"
packages = [{include = "explain", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ollama = ">=0.5.1,<0.6.0"
typer = ">=0.16.0,<0.17.0"
rich = ">=14.0.0,<15.0.0"
pyinstaller = { version = "^6.14.2", python = "<3.14" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
